1.0.3
    libgmtk - change GtkObjectClass to GObjectClass
    Cleanup some compiler warnings
    Updated Japanese translation
    Fix black screen issue when loading DVD
    Fix potential NULL pointer referenced Issue #503
    Make DVDNAV menu selection with mouse work properly
    Clean up shell script warning in configure
    Make configure option --with-gconf=yes override use of gsettings
    Updated Polish translation
    Clean up some compiler warnings
    Run autoreconf with new autoconf tools
    Removed --avoid-version from nautilus plugin
1.0.3beta
    Updated translations from launchpad, added in several new translations
    libgmtk - gmtk_media_player, better support for mplayer2
    libgmtk - gmtk_media_player, set default zoom to 1.0
    libgmtk - gmtk_media_player, clean up some attribute setter/getters
    libgmtk - gmtk_media_player, implement zoom factor for media, useful for panscan
    Shutdown mplayer before clearing playlist in open dtv, acd, vcd, and atv
    libgmtk - detect mplayer2, and allow setting a custom mplayer
    Convert mute 1\nseek 0 0\n commands to separate commands
    Add support for MPlayer2 detection
    Use a file chooser button to pick the mplayer executable rather than typing in the path
    Fix memory pointer issue that could lead to crash in mplayer thread
    Rework Next option when caching is enabled (recommend that caching be disabled)
    Be more specific in SPEC file
    Fix RPM generation when using GSettings
    Fix problem with STOP when playing a playlist
    libgmlib - gm_audio, include math.h, Issue #499
    libgmtk - gmtk_media_player, fix memory leak with stored color
    libgmtk - gmtk_media_player, manage widget background color correctly
    libgmtk - gmtk_audio_meter, move a varible context
    libgmtk - gmtk_media_player, get_allocation
    Try out silent make files
    Run update-po
    When stopping media, just quit mplayer instead of pausing and seeking to 0
    Fix resize issue in vertical layout